--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "vite": "^5.4.3"
-  }
+  },
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
+  },
+  "packageManager": "npm@10.0.0"
 }
